objects/User.object
<CustomObject>
    <fields>
        <fullName>Available_in_Baldo_TDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available in Baldo(TDP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Brand__c</fullName>
        <description>To capture OEM</description>
        <label>Dealer Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volvo</fullName>
                    <default>true</default>
                    <label>Volvo</label>
                </value>
                <value>
                    <fullName>Mack</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <isActive>false</isActive>
                    <label>Both</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <description>This field is used in the lightning component to stamp the dealer code a user is currently on to kick-start other actions.</description>
        <label>Dealer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Manager__c</fullName>
        <label>Dealer Manager</label>
        <relationshipName>Dealer_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Dual_Branded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for dynamic branding in communities for the toggle experience.</description>
        <label>Dual Branded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_group__c</fullName>
        <description>for executive group report</description>
        <label>Executive group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPR_Acknowledgement_Last_Accepted__c</fullName>
        <description>GDPR - Notification and Acknowledgement Date</description>
        <inlineHelpText>GDPR - Notification and Acknowledgement Date</inlineHelpText>
        <label>GDPR Acknowledgement Last Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mgmt_Dealer_Codes__c</fullName>
        <description>This stores dealer codes for Mgmt group irrespective of the brand.</description>
        <label>Mgmt Dealer Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Dealer_Mgmt_Group__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Dealer Mgmt Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Dealer_Code__c</fullName>
        <formula>Contact.Account.Dealer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Vocational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isBrand__c</fullName>
        <formula>TEXT($User.Dealer_Brand__c) = TEXT(Dealer_Brand__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUserRegion__c</fullName>
        <formula>TEXT($User.Region__c) = TEXT(Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isUserRegion</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Dealer_Brand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dealer_Admins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>User_Id__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Dealer Admin</value>
        </filters>
        <label>Dealer Admins</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dealer_Managers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>User_Id__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Partner Manager</value>
        </filters>
        <label>Dealer Managers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dealer_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>User_Id__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Dealer User</value>
        </filters>
        <label>Dealer Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>District_Sales_Manager</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>User_Id__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>District Sales Manager</value>
        </filters>
        <label>District Sales Manager</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_Users_Brand_is_Null</fullName>
        <columns>Dealer_Brand__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>User_Id__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>Dealer_Brand__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Internal Users - Brand is Null</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>